Primera version de registro de usuarios e incio de sesion

--- a/.env
+++ b/.env
@@ -15,3 +15,8 @@ DB_PASSWORD=rGoRHMziRDGno7CSW6SJ
 PORT=3000
 NODE_ENV=Production
 ALLOWED_ORIGINS=
+
+JWT_SECRET=clave_secreta_no_se_que_poner_xd
+JWT_EXPIRE=24h
+JWT_REFRESH_SECRET=clave_secreta_no_se_que_poner_xd
+JWT_REFRESH_EXPIRE=7d
