--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "name": "event-planner-api",
   "version": "1.0.0",
   "description": "API REST para sistema de gestión de eventos",
@@ -7,18 +7,28 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["api", "rest", "sequelize", "mysql", "eventos"],
+  "keywords": [
+    "api",
+    "rest",
+    "sequelize",
+    "mysql",
+    "eventos"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "sequelize": "^6.35.0",
-    "mysql2": "^3.6.5",
-    "dotenv": "^16.3.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
-    "bcrypt": "^5.1.1"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.6.5",
+    "sequelize": "^6.35.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
