--- a/.env
+++ b/.env
@@ -13,8 +13,9 @@ DB_USER=uxwepmajyxikn5gm
 DB_PASSWORD=rGoRHMziRDGno7CSW6SJ
 
 PORT=3000
-NODE_ENV=Production
-ALLOWED_ORIGINS=
+NODE_ENV=development
+#NODE_ENV=production
+ALLOWED_ORIGINS=http://localhost:3001
 
 JWT_SECRET=clave_secreta_no_se_que_poner_xd
 JWT_EXPIRE=24h
