Integracion del servicio de correos

--- a/.env
+++ b/.env
@@ -21,3 +21,6 @@ JWT_SECRET=clave_secreta_no_se_que_poner_xd
 JWT_EXPIRE=24h
 JWT_REFRESH_SECRET=clave_secreta_no_se_que_poner_xd
 JWT_REFRESH_EXPIRE=7d
+
+EMAIL_USER=event.planner.ufps@gmail.com
+EMAIL_PASSWORD=acmzqxaywrouwhbm
