Refactorizacion total de los controladores

--- a/.env
+++ b/.env
@@ -6,11 +6,17 @@
 #DB_PASSWORD=1234567890
 
 #Production
-DB_HOST=bdb5kgv4fbedcpioq718-mysql.services.clever-cloud.com
-DB_PORT=3306
-DB_NAME=bdb5kgv4fbedcpioq718
-DB_USER=uxwepmajyxikn5gm
-DB_PASSWORD=rGoRHMziRDGno7CSW6SJ
+#DB_HOST=bdb5kgv4fbedcpioq718-mysql.services.clever-cloud.com
+#DB_PORT=3306
+#DB_NAME=bdb5kgv4fbedcpioq718
+#DB_USER=uxwepmajyxikn5gm
+#DB_PASSWORD=rGoRHMziRDGno7CSW6SJ
+
+DB_HOST=mysql-17bc78b0-eventplanner-14c1.k.aivencloud.com
+DB_PORT=23393
+DB_NAME=defaultdb
+DB_USER=avnadmin
+DB_PASSWORD=AVNS_GEuCmeLU65Hl7OdwrHo
 
 PORT=3000
 NODE_ENV=development
