--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.9",
     "sequelize": "^6.35.0",
     "swagger-jsdoc": "^6.2.8",
