Update ALLOWED_ORIGINS for production environment

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ DB_PASSWORD=AVNS_GEuCmeLU65Hl7OdwrHo
 PORT=3000
 NODE_ENV=development
 #NODE_ENV=production
-ALLOWED_ORIGINS=http://localhost:3001
+ALLOWED_ORIGINS=https://event-planner.up.railway.app
 
 JWT_SECRET=clave_secreta_no_se_que_poner_xd
 JWT_EXPIRE=24h
