Actualizar configuración de base de datos en .env para usar nuevo host y credenciales

--- a/.env
+++ b/.env
@@ -12,11 +12,17 @@
 #DB_USER=uxwepmajyxikn5gm
 #DB_PASSWORD=rGoRHMziRDGno7CSW6SJ
 
-DB_HOST=mysql-17bc78b0-eventplanner-14c1.k.aivencloud.com
-DB_PORT=23393
-DB_NAME=defaultdb
-DB_USER=avnadmin
-DB_PASSWORD=AVNS_GEuCmeLU65Hl7OdwrHo
+#DB_HOST=mysql-17bc78b0-eventplanner-14c1.k.aivencloud.com
+#DB_PORT=23393
+#DB_NAME=defaultdb
+#DB_USER=avnadmin
+#DB_PASSWORD=AVNS_GEuCmeLU65Hl7OdwrHo
+
+DB_HOST=interchange.proxy.rlwy.net
+DB_PORT=46613
+DB_NAME=railway
+DB_USER=root
+DB_PASSWORD=ZiYOgWgvRtZHyMlxAKZCXEmBNXzrBtZy
 
 PORT=3000
 NODE_ENV=development
