--- a/.env
+++ b/.env
@@ -34,5 +34,6 @@ JWT_EXPIRE=24h
 JWT_REFRESH_SECRET=clave_secreta_no_se_que_poner_xd
 JWT_REFRESH_EXPIRE=7d
 
-EMAIL_USER=event.planner.ufps@gmail.com
+EMAIL_USER=onboarding@resend.dev
 EMAIL_PASSWORD=acmzqxaywrouwhbm
+RESEND_API_KEY=re_V47Sz7pn_LHxbWtij13df3HbDK3JtsiG6
